syntax = "proto3";

package go.micro.api.event;

service EventService {
  rpc Create(CreateRequest) returns (CreateResponse) {};
}

message CreateRequest {
  string type = 1;
  map<string, string> metadata = 2;
}

message CreateResponse {}